# snake-core

./: .flake8  .gitignore  .pylintrc  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.travis/: compile.sh  deploy.sh  regression.sh  style.sh  unit.sh
docker/: Dockerfile.pit  Dockerfile.snake  entrypoint-pit.sh  entrypoint-snake.sh
snake/: db.py  enums.py  error.py  fields.py  managers.py  scale.py  schema.py  snake.py  snake_utility.py  snaked.py  worker.py
snake/config/: __init__.py  config.py  constants.py
snake/core/: celery.py  route_manager.py  route_support.py  scale_manager.py  snake_handler.py
snake/data/config/: snake.conf
snake/data/snake/systemd/: snake-pit.conf.example  snake.conf.example
snake/data/systemd/: snake-pit.service  snake.service
snake/engines/mongo/: command.py  file.py  note.py
snake/routes/: api.py  command.py  download.py  file.py  memory.py  note.py  scale.py  store.py  upload.py
snake/scales/hashes/: __init__.py  commands.py
snake/scales/strings/: __init__.py  commands.py  regex.py
snake/scales/url/: __init__.py  upload.py
snake/utils/: __init__.py  file_storage.py  markdown.py  submitter.py
tests/: test_error.py  test_scale.py
tests/config/: test_config.py
tests/core/: test_celery.py  test_route_support.py
tests/utils/: test_markdown.py
